--- a/rtdap_prototype/templates/index.html
+++ b/rtdap_prototype/templates/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
-    <link rel="stylesheet" href="rtdap_prototype/static/css/w3.css">
+    <!-- <link rel="stylesheet" href="rtdap_prototype/static/css/w3.css"> -->
 
     <style type="text/css" media="screen">
 
